# tech_etf_quant

./: .gitignore  OPEN_WORKBENCH.bat  README.md  install_scheduler_task.bat  install_scheduler_task.ps1  main.py  pyproject.toml  requirements.txt  sitecustomize.py  start_dashboard.bat  start_dashboard.ps1  start_scheduler.bat  start_scheduler.ps1  stop_scheduler.bat  stop_scheduler.ps1  uninstall_scheduler_task.bat  uninstall_scheduler_task.ps1
.streamlit/: config.toml
app/: streamlit_app.py
config/: etf_pool.csv  logging.yaml  settings.yaml  uzi.yaml
data/processed/: 159713.csv  159732.csv  159819.csv  159915.csv  159995.csv  510300.csv  512480.csv  515050.csv  515260.csv  515880.csv  516150.csv  516510.csv  516640.csv  588000.csv  588200.csv
data/raw/: 159713.csv  159732.csv  159819.csv  159915.csv  159995.csv  510300.csv  512480.csv  515050.csv  515260.csv  515880.csv  516150.csv  516510.csv  516640.csv  588000.csv  588200.csv
logs/: error_log.csv  risk_log.csv  trade_log.csv  watch_log.csv
reports/backtest/: backtest_report.html  equity_curve.csv  performance.json  positions.csv  trades.csv
reports/daily/: 2026-05-31_daily_report.html  2026-05-31_daily_report.md  2026-05-31_ranking.csv
scripts/: init_project.py  run_backtest.py  run_daily_report.py  run_scheduler.py  run_streamlit.py  update_data.py
src/tech_etf_quant/: __init__.py  backtest.py  broker_sim.py  (+21 more)
tech_etf_quant/: __init__.py
tests/: test_backtest.py  test_indicators.py  test_position.py  test_report.py  test_risk.py  test_scoring.py  test_uzi.py  test_v2_workbench.py  test_watch.py
